src/objects/Borrowing__c.object
<CustomObject>
    <description>Contains all the borrowings associated with members within salesforce.  This contains the core details around the borrowing such as amount, state and repayment amount</description>
    <fields>
        <fullName>Account_ID__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Borrowings</relationshipLabel>
        <relationshipName>Borrowings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Borrowing Amount</description>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BRW_Approval_State__c</fullName>
        <label>Borrowing Approval State</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRW_Last_Repayment_Date__c</fullName>
        <label>Last Repayment Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRW_Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRW_State__c</fullName>
        <label>Borrowing State</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borrowing_PK__c</fullName>
        <externalId>true</externalId>
        <label>Borrowing_PK</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member_PK_Shadow__c</fullName>
        <formula>Member_PK__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member_PK_Shadow</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_PK__c</fullName>
        <externalId>true</externalId>
        <label>Member_PK</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_Balance__c</fullName>
        <label>Remaining Balance</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Repayment_Amount__c</fullName>
        <label>Repayment Amount</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Repayment_Day__c</fullName>
        <label>Repayment Day</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Borrowing</label>
    <nameField>
        <label>Borrowing_SFPK</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Borrowings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>